--- a/style.css
+++ b/style.css
@@ -1,8 +1,47 @@
 @import url(https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css);
-
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,400;0,700;1,400;1,700&family=Plus+Jakarta+Sans:wght@300;400;600;700;800&display=swap');
 :root{
     --pink:#fff9f5;
+    --orange:#fc8411;
+    --lblu:#18bed3;
+    --bs-body-font-family:'Plus Jakarta Sans', sans-serif;
+    --fmw:'Merriweather', serif;
+    --bs-body-color:#000000;
     }
 
+.fmw{font-family: var(--fmw);}
 .bpink{background-color:var(--pink);}
+.borange{background-color:var(--orange);}
+.blblu{background-color:var(--lblu);}
 .cpink{color:var(--pink);}
+.corange{color:var(--orange);}
+.clblu{color:var(--lblu);}
+footer ul {list-style: none;}
+footer li a {
+    color: #fff;
+    font-weight: 600;
+    text-decoration: none;
+    }
+footer .social a {color:#fff;}
+#pills-tab {font-weight: 700;}
+#pills-tab.nav-pills .nav-link, #pills-tab.nav-pills .show > .nav-link {
+    color: #fff;
+    }
+#pills-tab.nav-pills .nav-link.active,#pills-tab.nav-pills .show > .nav-link {
+    color: #000;
+    background-color: #fff;
+    }
+.videos .col-sm-6 {
+    position: relative;
+    }
+.videos .col-sm-6::before {
+    content: url('https://api.iconify.design/bi/play-circle-fill.svg?color=%23fc8411&width=50&height=50');
+    position: absolute;
+    top: 33%;
+    left: 39%;
+    background: #fff;
+    border-radius: 50%;
+    height: 50px;
+    width: 50px;
+    }
+#pills-tabContent .row {min-height: 530px;}
